--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</button>
 		</div>
 	
-		<textarea class="bg-[#EEF1FF] mb-4 rounded w-full max-w-screen-md max-h-56 text-calc-1 p-4" id="text" cols="50" rows="10"></textarea>
+		<textarea readonly class="bg-[#EEF1FF] mb-4 rounded w-full max-w-screen-md max-h-56 text-calc-1 p-4" id="text" cols="50" rows="10"></textarea>
 	</div>
 
 	
