--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>siri</title>
 	<script src="https://cdn.tailwindcss.com"></script>
 	<script src="tailwind.config.js"></script>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 
 <body class="w-full h-full bg-[#B1B2FF] flex justify-center items-center flex-col">
@@ -25,9 +25,8 @@
 	
 		<textarea readonly class="bg-[#EEF1FF] mb-4 rounded w-full max-w-screen-md max-h-56 text-calc-1 p-4" id="text" cols="50" rows="10"></textarea>
 	</div>
-
 	
-	<script src="script.js"></script>
+	<script type="module" src="script.js"></script>
 </body>
 
 </html>
