Starting to figure things out

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	</div>
 	
 	<script type="module" src="script.js"></script>
+	<script type="module" src="commands.js"></script>
 </body>
 
 </html>
