--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 		<textarea readonly class="bg-[#EEF1FF] mb-4 rounded w-full max-w-screen-md max-h-56 text-calc-1 p-4" id="text" cols="50" rows="10"></textarea>
 	</div>
 	
-	<script type="module" src="script.js"></script>
-	<script type="module" src="commands.js"></script>
+	<script type="module" src="./script.js"></script>
 </body>
 
 </html>
